<resources>
    <string name="app_name">CarPrice</string>
    <string name="recherche">Recherche</string>
    <string name="page_accueil">Bienvenue sur l\'application CarPrice. \nCette application vous est offert par\n
                                Ludovik Marcelis et Marc Quenon
    </string>
    <string name="connection">Log in</string>
    <string name="inscription">Sign in</string>
    <string name="map">Google Map</string>
    <string name="title_activity_google_map">Map</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retour">Retour</string>
    <string name="mail">Mail</string>
    <string name="name">Name</string>
    <string name="street">Street</string>
    <string name="postcode">Postcode</string>
    <string name="number">Number</string>
    <string name="town">Town</string>
    <string name="year">Year</string>
    <string name="price">Price</string>
    <string name="country">Country</string>
    <string name="type">Type</string>
    <string name="state">State</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="firstname">Firstname</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
</resources>
