<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Signin"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/et_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:layout_marginTop="60dp"
        android:hint="@string/firstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/et_country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/mail"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/country"
        app:layout_constraintStart_toStartOf="@+id/et_firstname"
        app:layout_constraintTop_toBottomOf="@+id/et_firstname" />


    <EditText
        android:id="@+id/et_town"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/town"
        app:layout_constraintStart_toStartOf="@+id/et_country"
        app:layout_constraintTop_toBottomOf="@+id/et_country" />

    <EditText
        android:id="@+id/et_passaword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="@+id/et_number"
        app:layout_constraintTop_toBottomOf="@+id/et_number" />

    <EditText
        android:id="@+id/et_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/street"
        app:layout_constraintStart_toStartOf="@+id/et_mail"
        app:layout_constraintTop_toBottomOf="@+id/et_mail" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/number"
        app:layout_constraintStart_toStartOf="@+id/et_street"
        app:layout_constraintTop_toBottomOf="@+id/et_street" />

    <EditText
        android:id="@+id/et_postcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/postcode"
        app:layout_constraintStart_toStartOf="@+id/et_town"
        app:layout_constraintTop_toBottomOf="@+id/et_town" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/inscription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>