<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vehicule.SearchVehicule"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/et_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="51dp"
        android:hint="@string/brand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="95dp"
        android:layout_marginTop="51dp"
        android:hint="@string/model"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/state"
        app:layout_constraintEnd_toEndOf="@+id/et_brand"
        app:layout_constraintStart_toStartOf="@+id/et_brand"
        app:layout_constraintTop_toBottomOf="@+id/et_brand" />

    <EditText
        android:id="@+id/et_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/type"
        app:layout_constraintStart_toStartOf="@+id/et_model"
        app:layout_constraintTop_toBottomOf="@+id/et_model" />

    <EditText
        android:id="@+id/et_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/country"
        app:layout_constraintStart_toStartOf="@+id/et_year"
        app:layout_constraintTop_toBottomOf="@+id/et_year" />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:hint="@string/price"
        app:layout_constraintBottom_toTopOf="@+id/et_town"
        app:layout_constraintStart_toStartOf="@+id/et_town" />

    <EditText
        android:id="@+id/et_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="32dp"
        android:hint="@string/year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_state" />

    <EditText
        android:id="@+id/et_town"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="101dp"
        android:hint="@string/town"
        app:layout_constraintBottom_toBottomOf="@+id/et_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_country" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="119dp"
        android:layout_marginTop="126dp"
        android:text="@string/recherche"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_country" />

    <Button
        android:id="@+id/btn_retour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/retour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>