<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

   <ImageView
       android:id="@+id/iv_logo"
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:layout_marginBottom="25dp"
       android:layout_marginEnd="63dp"
       android:layout_marginStart="63dp"
       android:layout_marginTop="16dp"
       android:src="@mipmap/logo"
       app:layout_constraintBottom_toTopOf="@+id/tv_welcome"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/tv_welcome"
       android:layout_width="233dp"
       android:layout_height="62dp"
       android:layout_marginBottom="16dp"
       android:text="@string/page_accueil"
       app:layout_constraintBottom_toTopOf="@+id/btn_google_map"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.503"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

   <Button
       android:id="@+id/btn_sign_in"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="16dp"
       android:text="@string/inscription"
       app:layout_constraintBottom_toTopOf="@+id/btn_log_in"
       app:layout_constraintStart_toStartOf="@+id/btn_log_in"
       app:layout_constraintTop_toBottomOf="@+id/btn_google_map" />

   <Button
       android:id="@+id/btn_log_in"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="16dp"
       android:text="@string/connection"
       app:layout_constraintBottom_toTopOf="@+id/btn_search_car"
       app:layout_constraintStart_toStartOf="@+id/btn_search_car"
       app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

   <Button
       android:id="@+id/btn_google_map"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="17dp"
       android:text="@string/map"
       app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
       app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
       app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

   <Button
       android:id="@+id/btn_search_car"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="81dp"
       android:text="@string/recherche"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/btn_log_in" />


</android.support.constraint.ConstraintLayout>